--- a/general.css
+++ b/general.css
@@ -7,16 +7,18 @@
     font-size: 25px;
 }
 #ENTITLE {
-    font-family: "Jomolhari", sans-serif;
-    font-size: 25px;
+    font-family: "Arial", sans-serif;
+    font-size: 20px;
+    font-weight: bold;
 }
 #ENENTRY {
-    font-family: "Jomolhari", sans-serif;
-    font-size: 25px;
+    font-family: "Arial", sans-serif;
+    font-size: 17px;
 }
 #BOTITLE {
     font-family: "Jomolhari", sans-serif;
-    font-size: 25px;
+    font-size: 30px;
+    font-weight: bold;
 }
 #BOENTRY {
     font-family: "Jomolhari", sans-serif;
