--- a/general.css
+++ b/general.css
@@ -1,3 +1,39 @@
+h1 {
+    font-family: "Jomolhari", sans-serif;
+    font-size: 50px;
+    font-weight: normal;
+    color: darkblue;
+}
+h2 {
+    font-family: "Jomolhari", sans-serif;
+    font-size: 42px;
+    font-weight: normal;
+    color: darkblue;
+}
+h3 {
+    font-family: "Jomolhari", sans-serif;
+    font-size: 36px;
+    font-weight: normal;
+    color: darkblue;
+}
+h4 {
+    font-family: "Jomolhari", sans-serif;
+    font-size: 30px;
+    font-weight: normal;
+    color: darkblue;
+}
+h5 {
+    font-family: "Jomolhari", sans-serif;
+    font-size: 27px;
+    font-weight: normal;
+    color: darkblue;
+}
+h6 {
+    font-family: "Jomolhari", sans-serif;
+    font-size: 23px;
+    font-weight: normal;
+    color: darkblue;
+}
 #ROOTEXT {
     font-family: "Jomolhari", sans-serif;
     font-size: 30px;
