--- a/general.css
+++ b/general.css
@@ -9,18 +9,21 @@ h2 {
     font-size: 42px;
     font-weight: normal;
     color: darkblue;
+    margin-bottom: 0px;
 }
 h3 {
     font-family: "Jomolhari", sans-serif;
     font-size: 36px;
     font-weight: normal;
     color: darkblue;
+    // line-height: 0px;
 }
 h4 {
     font-family: "Jomolhari", sans-serif;
     font-size: 30px;
     font-weight: normal;
     color: darkblue;
+    line-height: 0px;
 }
 h5 {
     font-family: "Jomolhari", sans-serif;
