--- a/general.css
+++ b/general.css
@@ -59,6 +59,7 @@ h6 {
     font-family: "Noto Serif Tibetan", sans-serif;
     font-size: 20px;
     line-height: 2em;
+    font-weight: normal;
 }
 .tippy-box[data-theme~='popup'] {
     background-color: grey;
